<resources>
    <string name="app_name">MySubmission_intermediate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_email_error">must be unique</string>
    <string name="message_name_error">username cannot be empty</string>
    <string name="message_password_error">must be at least 6 characters</string>
    <string name="message_email_novalid">Invalid Email</string>
    <string name="message_password_novalid">Invalid Password</string>
    <string name="title_home">Story</string>
    <string name="title_addStory">Add Story</string>
    <string name="title_logout">Logout</string>
    <string name="story_app">Story App</string>
    <string name="title">Title</string>
    <string name="details">Detail</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="story_desc">Enter a Story Decription</string>
    <string name="upload">Upload</string>
    <string name="message_main_page">Are you sure you want to leave?</string>
    <string name="logout">Logout</string>
    <string name="detail_story">Detail Story</string>
    <string name="username">Username</string>
    <string name="detail_photo_story">Photo Detail Story</string>
    <string name="input_image">Select a photo to upload!</string>
    <string name="title_story">Title Story</string>
    <string name="Profile">Profile</string>
    <string name="add_story_valid">add story valid</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_type">Normal</string>
    <string name="terrain_type">Terrain</string>
    <string name="satelite_type">Satellite</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="maps">Maps</string>

    <string name="empty_address">Unknown Address</string>
    <string name="empty_location">No Location</string>
    <string name="input_your_location">Input Your Location</string>


</resources>